--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -1,83 +1,160 @@
 @media screen and (min-width: 550px) {
-    div.homeDiv {
-        background-image: url(../Images/Menu/Menu4.jpg);
-    }
-    .gridMenu{
-        display: grid;
-        grid-template-rows: 484px 34px 20px 44px 14px 44px 13px 44px 13px 44px 13px 44px auto;
-        grid-template-columns: 12px 40px 206px 20px 206px 34px auto;
-    }
+  div.homeDiv {
+    background-image: url(../Images/Menu/Menu4.jpg);
+  }
+  .gridMenu {
+    display: grid;
+    grid-template-rows: 484px 34px 20px 44px 14px 44px 13px 44px 13px 44px 13px 44px auto;
+    grid-template-columns: 12px 40px 206px 20px 206px 34px auto;
+  }
+  .menuButton {
+    width: 432px;
+  }
+
+  .menuGridButtonsLogOut {
+    width: 240px;
+  }
+
+  #menuGridButton2 > button {
+    width: 240px;
+  }
+
+  #menuGridButton1 > button {
+    width: 246px;
+  }
+  #menuGridButton1 {
+    grid-area: 2 / 2 / 3 / 4;
+  }
+  #menuGridButton2 {
+    grid-area: 2 / 5 / 3 / 7;
+  }
+  #menuButton1 {
+    grid-area: 4 / 3 / 5 / 6;
+  }
+  #menuButton2 {
+    grid-area: 6 / 3 / 7 / 6;
+  }
+  #menuButton3 {
+    grid-area: 8 / 3 / 9 / 6;
+  }
+  #menuButton4 {
+    grid-area: 10 / 3 / 11 / 6;
+  }
+  #menuButton5 {
+    grid-area: 12 / 3 / 13 / 6;
+  }
 }
 
 @media screen and (max-width: 550px) {
-    .gridMenu {
-        display: grid;
-        grid-template-rows: 484px 34px 20px 44px 14px 44px 13px 44px 13px 44px 13px 44px auto;
-        grid-template-columns: auto 40px 206px 20px 206px 34px auto;
-    }
-    /* div.homeDiv {
-        background: radial-gradient(circle, rgba(255, 255, 102, 1) 21%, rgba(255, 153, 51, 1) 94%);
-    } */
+  .gridMenu {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-top: 100%;
+  }
+  #menuGridButton1 {
+    width: 50%;
+    margin-bottom: 20px;
+  }
+  #menuGridButton2 {
+    width: 50%;
+  }
+  #menuButton1 {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  #menuButton2 {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  #menuButton3 {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  #menuButton4 {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  #menuButton5 {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .menuButton {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .menuGridButtonsLogOut {
+    width: 100%;
+  }
+
+  #menuGridButton2 > button {
+    width: 100%;
+  }
+
+  #menuGridButton1 > button {
+    width: 100%;
+  }
 }
 
-.menuButton{
-    height: 44px;
-    width: 432px;
-    background: radial-gradient(#ff0000, #800000);
-    font-weight: bold;
-    color: #ffcc00;
-    font-size: larger;
-    text-shadow: 2px 2px black;
+.menuButton {
+  height: 44px;
+  /* width: 432px; */
+  background: radial-gradient(#ff0000, #800000);
+  font-weight: bold;
+  color: #ffcc00;
+  font-size: larger;
+  text-shadow: 2px 2px black;
 }
 
-.menuGridButtonsLogOut{
-    height: 38px;
-    width: 240px;
-    background: radial-gradient(#ff0000, #800000);
-    font-weight: bold;
-    color: #ffcc00;
-    font-size: larger;
-    text-shadow: 2px 2px black;
+.menuGridButtonsLogOut {
+  height: 38px;
+  /* width: 240px; */
+  background: radial-gradient(#ff0000, #800000);
+  font-weight: bold;
+  color: #ffcc00;
+  font-size: larger;
+  text-shadow: 2px 2px black;
 }
 
-#menuGridButton2>button {
-    height: 38px;
-    width: 240px;
-    background: radial-gradient(#ff0000, #800000);
-    font-weight: bold;
-    color: #ffcc00;
-    font-size: larger;
-    text-shadow: 2px 2px black;
+#menuGridButton2 > button {
+  height: 38px;
+  /* width: 240px; */
+  background: radial-gradient(#ff0000, #800000);
+  font-weight: bold;
+  color: #ffcc00;
+  font-size: larger;
+  text-shadow: 2px 2px black;
 }
 
 #menuGridButton1 > button {
-    height: 38px;
-    width: 246px;
-    background: radial-gradient(#ff0000, #800000);
-    font-weight: bold;
-    color: #ffcc00;
-    font-size: larger;
-    text-shadow: 2px 2px black;
+  height: 38px;
+  /* width: 246px; */
+  background: radial-gradient(#ff0000, #800000);
+  font-weight: bold;
+  color: #ffcc00;
+  font-size: larger;
+  text-shadow: 2px 2px black;
 }
 
-#menuGridButton1{
-    grid-area: 2 / 2 / 3 / 4;
+/* #menuGridButton1 {
+  grid-area: 2 / 2 / 3 / 4;
 }
 #menuGridButton2 {
-    grid-area: 2 / 5 / 3 / 7;
+  grid-area: 2 / 5 / 3 / 7;
 }
 #menuButton1 {
-    grid-area: 4 / 3 / 5 / 6;
+  grid-area: 4 / 3 / 5 / 6;
 }
 #menuButton2 {
-    grid-area: 6 / 3 / 7 / 6;
+  grid-area: 6 / 3 / 7 / 6;
 }
 #menuButton3 {
-    grid-area: 8 / 3 / 9 / 6;
+  grid-area: 8 / 3 / 9 / 6;
 }
 #menuButton4 {
-    grid-area: 10 / 3 / 11 / 6;
+  grid-area: 10 / 3 / 11 / 6;
 }
 #menuButton5 {
-    grid-area: 12 / 3 / 13 / 6;
-}
+  grid-area: 12 / 3 / 13 / 6;
+} */
